--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -143,7 +143,7 @@
     <string name="book_format_other">Andere</string>
     <string name="book_format_digest">Heft</string>
     <string name="book_format_dimensions">Abmessungen</string>
-    <string name="book_format_ebook">eBook</string>
+    <string name="book_format_ebook">"Onlinebuch "</string>
     <string name="book_format_hardcover">Gebundene Ausgabe</string>
     <string name="book_format_paperback">Taschenbuch</string>
     <string name="book_format_paperback_large">Paperback</string>
@@ -153,7 +153,7 @@
     <string name="btn_all_books">Alle Bücher</string>
     <string name="action_clear_queue">Warteschlange löschen</string>
     <string name="action_disable_message">Meldung deaktivieren</string>
-    <string name="action_email">E-Mail senden</string>
+    <string name="action_email">E-Mail</string>
     <string name="btn_just_this_shelf">Nur dieses Bücherregal</string>
     <string name="action_learn_more">Weitere Informationen</string>
     <string name="action_less_ellipsis">Weniger…</string>
