--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -140,7 +141,7 @@
     <string name="book_format_other">Αλλα</string>
     <string name="book_format_digest">Kleines</string>
     <string name="book_format_dimensions">Διαστάσεις</string>
-    <string name="book_format_ebook">eBook</string>
+    <string name="book_format_ebook">ηλεκτρονικό βιβλίο</string>
     <string name="book_format_hardcover">σκληρό βιβλίο</string>
     <string name="book_format_paperback">βιβλίο τσέπης</string>
     <string name="book_format_paperback_large">χαρτόδετο βιβλίο</string>
@@ -150,7 +151,7 @@
     <string name="btn_all_books">Όλα τα βιβλία</string>
     <string name="action_clear_queue">Εκκαθάριση ουράς</string>
     <string name="action_disable_message">Απενεργοποίηση μηνυμάτων</string>
-    <string name="action_email">Ηλεκτρονικό ταχυδρομείο</string>
+    <string name="action_email">ηλεκτρονικό ταχυδρομείο</string>
     <string name="btn_just_this_shelf">Μόνο αυτό το ράφι βιβλίου</string>
     <string name="action_learn_more">Μάθετε περισσότερα</string>
     <string name="action_less_ellipsis">Πιο λιγο…</string>
