--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -367,7 +368,7 @@
     <string name="lbl_import_books">Importa libri</string>
     <string name="option_import_books_option_all">Tutti i libri</string>
     <string name="option_import_books_option_new_and_updated">Libri nuovi e aggiornati</string>
-    <string name="option_header_import_books_option_new_and_updated_cutoff_date">Importa solo libri che sono stati modificati dopo questa data</string>
+    <string name="option_header_import_books_option_new_and_updated_cutoff_date">Importa solo libri che sono stati\nmodificati dopo questa data</string>
     <string name="option_import_books_option_new_only">Solo nuovi libri</string>
     <string name="lbl_import_options">Seleziona cosa verrà importato.</string>
     <string name="lbl_importing">Importazione in corso…</string>
