--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -22,8 +23,8 @@
 ]>
 <!-- Quotes „…“  - Regex to find wrong ones: ('|”|‘|’|«|») --><!--suppress LongLine --><resources>
     <plurals name="displaying_n_books">
-        <item quantity="one">%1$d Buch angezeigt</item>
-        <item quantity="other">%1$d Bücher werden angezeigt</item>
+        <item quantity="one">%1$d Buch</item>
+        <item quantity="other">%1$d Bücher</item>
     </plurals>
     <plurals name="n_books_found">
         <item quantity="one">%1$d Buch gefunden</item>
