--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -25,9 +25,9 @@
 ]>
 <!-- Quotes «…»  - Regex to find wrong ones: ('|„|“|”|‘|’) --><!--suppress LongLine --><resources>
     <plurals name="displaying_n_books">
-        <item quantity="one">%1$d libro mostrado</item>
-        <item quantity="many">Mostrando %1$d libros</item>
-        <item quantity="other">Mostrando %1$d libros</item>
+        <item quantity="one">%1$d libro</item>
+        <item quantity="many">%1$d libros</item>
+        <item quantity="other">%1$d libros</item>
     </plurals>
     <plurals name="n_books_found">
         <item quantity="one">%1$d libro encontrado</item>
