--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -23,9 +24,9 @@
 <!-- Quotes «…»  - Regex to find wrong ones: ('|„|“|”|‘|’)
 --><!--suppress LongLine --><resources xmlns:tools="http://schemas.android.com/tools">
     <plurals name="displaying_n_books">
-        <item quantity="one">Affichage de %1$d livre</item>
-        <item quantity="other">Affichage de %1$d livres</item>
-        <item quantity="many">Affichage de %1$d livres</item>
+        <item quantity="one">%1$d livre</item>
+        <item quantity="other">%1$d livres</item>
+        <item quantity="many">%1$d livres</item>
     </plurals>
     <plurals name="n_books_found">
         <item quantity="one">%1$d livre trouvé</item>
