--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -18,13 +18,15 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!-- Quotes „…”  - Regex to find wrong ones: ('|“|‘|’|«|») --><!--suppress LongLine --><resources>
     <plurals name="displaying_n_books">
-        <item quantity="one">%1$d boek op deze plank</item>
-        <item quantity="other">%1$d boeken op deze plank</item>
+        <item quantity="one">%1$d boek</item>
+        <item quantity="other">%1$d boeken</item>
     </plurals>
     <plurals name="n_books_found">
         <item quantity="one">%1$d boek gevonden</item>
